// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetNextListing() action creator should create the correct actions for when the get next product listing procedure is successful without receiving options: Get product infinite listing success payload without receiving options 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_136103": Object {
          "description": "A-Line Skirts",
          "id": "categories_136103",
          "parentId": "categories_undefined",
          "slug": "skirts-a-line-skirts",
          "url": "woman/skirts-a-line-skirts",
          "value": 136103,
        },
        "colors_6": Object {
          "description": "BLUE",
          "id": "colors_6",
          "parentId": "colors_colors_0",
          "value": 6,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
        "12913174": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": Object {
            "entries": Array [
              Object {
                "images": Array [
                  Object {
                    "order": 1,
                    "size": "50",
                    "sources": Object {
                      "50": "image-1",
                    },
                    "url": "image-1",
                  },
                ],
                "merchantId": 9359,
                "productId": 12912485,
                "shortDescription": "Cotton Patchwork Trousers",
              },
            ],
            "remaining": 15,
            "totalItems": 20,
          },
          "id": 12913174,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913174",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "searchResults": Object {
        "/us/listing/woman/clothing?categories=135971&colors=6": Object {
          "breadCrumbs": Array [
            Object {
              "link": "shopping/woman",
              "slug": "woman",
              "text": "Woman",
            },
          ],
          "config": Object {
            "pageSize": 20,
          },
          "facetGroups": Array [
            Object {
              "deep": 3,
              "description": "Categories",
              "key": "categories",
              "type": 6,
              "values": Array [
                Array [
                  "categories_136103",
                ],
              ],
            },
            Object {
              "deep": 0,
              "description": "Colors",
              "dynamic": 0,
              "format": "multiple",
              "key": "colors",
              "type": 11,
              "values": Array [
                Array [
                  "colors_6",
                ],
              ],
            },
          ],
          "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
          "name": null,
          "products": Object {
            "entries": Array [
              13436973,
              12913172,
              12913174,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
    "result": "/us/listing/woman/clothing?categories=135971&colors=6",
  },
  "type": "@farfetch/blackout-core/GET_LISTING_SUCCESS",
}
`;

exports[`doGetNextListing() action creator should create the correct actions for when the get next product listing procedure is successful: Get product infinite listing success payload 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_136103": Object {
          "description": "A-Line Skirts",
          "id": "categories_136103",
          "parentId": "categories_undefined",
          "slug": "skirts-a-line-skirts",
          "url": "woman/skirts-a-line-skirts",
          "value": 136103,
        },
        "colors_6": Object {
          "description": "BLUE",
          "id": "colors_6",
          "parentId": "colors_colors_0",
          "value": 6,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg?c=2",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
        "12913174": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": Object {
            "entries": Array [
              Object {
                "images": Array [
                  Object {
                    "order": 1,
                    "size": "50",
                    "sources": Object {
                      "50": "image-1",
                    },
                    "url": "image-1",
                  },
                ],
                "merchantId": 9359,
                "productId": 12912485,
                "shortDescription": "Cotton Patchwork Trousers",
              },
            ],
            "remaining": 15,
            "totalItems": 20,
          },
          "id": 12913174,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg?c=2",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/74/12913174_13206158_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913174",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "searchResults": Object {
        "/us/listing/woman/clothing?categories=135971&colors=6": Object {
          "breadCrumbs": Array [
            Object {
              "link": "shopping/woman",
              "slug": "woman",
              "text": "Woman",
            },
          ],
          "config": Object {
            "pageSize": 20,
          },
          "facetGroups": Array [
            Object {
              "deep": 3,
              "description": "Categories",
              "key": "categories",
              "type": 6,
              "values": Array [
                Array [
                  "categories_136103",
                ],
              ],
            },
            Object {
              "deep": 0,
              "description": "Colors",
              "dynamic": 0,
              "format": "multiple",
              "key": "colors",
              "type": 11,
              "values": Array [
                Array [
                  "colors_6",
                ],
              ],
            },
          ],
          "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
          "name": null,
          "products": Object {
            "entries": Array [
              13436973,
              12913172,
              12913174,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "hash": "/us/listing/woman/clothing?categories=135971&colors=6",
    "result": "/us/listing/woman/clothing?categories=135971&colors=6",
  },
  "type": "@farfetch/blackout-core/GET_LISTING_SUCCESS",
}
`;
